# TSBL

./: .gitattributes  .gitignore  README.md  docker-compose.yml  index.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/common/: base_repository.py  enums.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/core/logging/: __init__.py  logger.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/middleware/: __init__.py  correlation_id.py  localization.py  request_id.py
backend/app/modules/admin/api/: routes.py
backend/app/modules/admin/application/: admin_service.py
backend/app/modules/admin/domain/: entities.py  value_objects.py
backend/app/modules/admin/infrastructure/: admin_repository.py
backend/app/modules/admin/schemas/: admin_schema.py
backend/app/modules/affiliate/api/: routes.py
backend/app/modules/affiliate/application/: affiliate_service.py
backend/app/modules/affiliate/domain/: entities.py  exceptions.py  interfaces.py  value_objects.py
backend/app/modules/affiliate/infrastructure/: affiliate_repository.py
backend/app/modules/affiliate/schemas/: affiliate_schema.py
backend/app/modules/analytics/api/: routes.py
backend/app/modules/analytics/application/: analytics_service.py
backend/app/modules/analytics/domain/: entities.py  value_objects.py
backend/app/modules/analytics/infrastructure/: analytics_repository.py
backend/app/modules/analytics/schemas/: analytics_schema.py
backend/app/modules/auth/api/: routes.py
backend/app/modules/auth/application/: __init__.py  auth_service.py
backend/app/modules/authorization/: decorators.py  dependencies.py  seed.py
backend/celery/: __init__.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_new_modules.py
(+216 files in other folders)
